--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<nav>
 			<div class="topnav" id="myTopnav">
 				<a href="index.html">home</a>
-				<a href="project.html"> progect </a>
+				<a href="projects.html"> progects </a>
 				<a href="blog.html">blog</a>
 				<a href="contacts">contacts</a>
 				<a id="menu" href="#" class="icon">&#9776;</a>
@@ -61,6 +61,23 @@
 		</div>
 		
 	</main>
+	<footer>
+		<nav>
+			<a href="index.html">home</a>
+			<a href="project.html"> progect </a>
+			<a href="blog.html">blog</a>
+			<a href="contacts">contacts</a>	
+		</nav>
+		<div class="social">
+			<a href="#"><img src="img/social/one.png"></a>
+			<a href="#"><img src="img/social/two.png"></a>
+			<a href="#"><img src="img/social/three.png"></a>
+			<a href="#"><img src="img/social/four.png"></a>
+			<a href="#"><img src="img/social/five.png"></a>
+			
+		</div>
+		<p>3D-panel Lviv</p>
+	</footer>
 	<script src="js/script.js"></script>
 </body>
 </html>
