added about page

--- a/about.html
+++ b/about.html
@@ -25,31 +25,11 @@
 		</nav>
 	</header>
 	<main>
-		<div class="blog-container">
-			<div class="blog-header">
-				<div class="blog-cover"></div>
-			</div>
-			<div class="blog-body">
-				<div class="blog-title">
-					<h1><a href="#"> Lorem ipsum dolor sit amet.</a></h1>
-				</div>
-				<div class="blog-text">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt impedit iste tempora at modi iure veniam quos natus eum voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, laboriosam adipisci voluptates minima atque. Similique nesciunt esse excepturi tempora rem!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt impedit iste tempora at modi iure veniam quos natus eum voluptate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, laboriosam adipisci voluptates minima atque. Similique nesciunt esse excepturi tempora rem</p>	
-				</div>
-				<div class="blog-tags">
-					<ul>
-						<li><a href="#">Lorem</a></li>
-						<li><a href="#">ipsum</a></li>
-						<li><a href="#">dolor</a></li>
-						<li><a href="#">amet</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="blog-footer">
-				<ul>
-					<li class="published-date">4 days ago</li>
-				</ul>
-			</div>
+		<div class="about__container">
+			<img src="img/about.jpg" alt="ABOUT">
+			<h1>Lorem ipsum dolor sit amet.</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis inventore et nobis, incidunt quasi nemo id provident, veniam ipsum, recusandae dolorem, accusamus voluptates commodi doloribus dolore similique repudiandae error. Quidem minima incidunt, consectetur sed, deserunt aliquam. Blanditiis ipsam suscipit, fuga itaque inventore nulla dolore, officia eos cum architecto, ut aliquid!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex quidem, maxime explicabo. Sapiente non ex aliquam facere eos fuga officia unde, repellendus, reprehenderit eveniet, eaque voluptates placeat cumque? Cupiditate minus nostrum vitae mollitia doloremque eum dignissimos minima voluptates laudantium ducimus fugiat quo veniam accusantium provident, unde reprehenderit aliquid optio laboriosam iure repudiandae doloribus, officiis excepturi vel totam. Assumenda enim totam, molestiae fugiat minima dolorum cupiditate aliquam iure pariatur laudantium accusantium repudiandae sit eaque odit in earum numquam vel, unde similique?</p>
 		</div>
 	</main>
 	<footer>
