--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 		</div>
 		<nav>
 			<div class="topnav" id="myTopnav">
-				<a href="index.html">home</a>
-				<a href="projects.html"> progects </a>
-				<a href="blog.html">blog</a>
-				<a href="contacts">contacts</a>
+				<a href="index.html">HOME</a>
+				<a href="projects.html">PROGECTS</a>
+				<a href="blog.html">BLOG</a>
+				<a href="contact.html">CONTACTS</a>
+				<a href="location.html">LOCATION</a>
+				<a href="about.html"> ABOUT </a>
+				<a href="services.html"> SERVICES </a>
 				<a id="menu" href="#" class="icon">&#9776;</a>
 				
 			</div>
